[gd_scene load_steps=16 format=2]

[ext_resource path="res://juego/botones/BotonFlecha.tscn" type="PackedScene" id=1]
[ext_resource path="res://juego/nivel/Nivel.gd" type="Script" id=2]
[ext_resource path="res://juego/cuadros/CuadroAccion.tscn" type="PackedScene" id=3]
[ext_resource path="res://juego/cuadroInformacion/BarraTiempo.tscn" type="PackedScene" id=4]
[ext_resource path="res://juego/moustro/Moustro.tscn" type="PackedScene" id=5]
[ext_resource path="res://juego/cuadroInformacion/PuntuacionInGame.tscn" type="PackedScene" id=6]
[ext_resource path="res://juego/HUD/VentanaEmergentederrota.tscn" type="PackedScene" id=7]
[ext_resource path="res://assents temporal/fondo2.png" type="Texture" id=8]
[ext_resource path="res://assents temporal/botonPregunta.png" type="Texture" id=9]
[ext_resource path="res://juego/cuadroInformacion/BombitaTiempo.tscn" type="PackedScene" id=10]
[ext_resource path="res://juego/menus/MenuGuia.tscn" type="PackedScene" id=11]
[ext_resource path="res://recursos/musica/POL-dual-dragon-short.wav" type="AudioStream" id=12]
[ext_resource path="res://recursos/font/IrishGrover-Regular.ttf" type="DynamicFontData" id=13]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.690196, 0.686275, 0.647059, 1 )

[sub_resource type="DynamicFont" id=2]
size = 12
font_data = ExtResource( 13 )

[node name="Nivel" type="Node2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [ 628.0, 490.0, 440.0, 438.0, 388.0, 386.0, 336.0, 334.0, 284.0, 282.0, 232.0, 230.0, 180.0, 178.0, 128.0, 126.0, 76.0, 74.0, 24.0, 22.0, -28.0, -30.0, -80.0, -55.0 ],
"_edit_vertical_guides_": [ 212.0, 40.0, 385.0, 60.0, 365.0, 85.0, 340.0, 70.0, 355.0 ]
}
cuadroAccion = ExtResource( 3 )

[node name="Control" type="Control" parent="."]
margin_right = 426.0
margin_bottom = 705.0

[node name="Sprite" type="Sprite" parent="Control"]
position = Vector2( 212, 350 )
texture = ExtResource( 8 )

[node name="HUD" type="CanvasLayer" parent="."]
pause_mode = 2

[node name="VentanaEmergentederrota" parent="HUD" instance=ExtResource( 7 )]
visible = false
menu_principal = "res://juego/menus/MenuPrincipal.tscn"

[node name="MenuGuia" parent="HUD" instance=ExtResource( 11 )]
visible = false

[node name="BotonIzq" parent="." instance=ExtResource( 1 )]
position = Vector2( 85, 628 )
scale = Vector2( 0.75, 0.75 )

[node name="BotonDer" parent="." instance=ExtResource( 1 )]
position = Vector2( 340, 628 )
rotation = 3.14159
scale = Vector2( 0.75, 0.75 )

[node name="ConPosIzq" type="Node2D" parent="."]

[node name="Position2D" type="Position2D" parent="ConPosIzq"]
position = Vector2( 110, 534 )

[node name="Position2D2" type="Position2D" parent="ConPosIzq"]
position = Vector2( 85, 465 )

[node name="Position2D3" type="Position2D" parent="ConPosIzq"]
position = Vector2( 85, 413 )

[node name="Position2D4" type="Position2D" parent="ConPosIzq"]
position = Vector2( 85, 361 )

[node name="Position2D5" type="Position2D" parent="ConPosIzq"]
position = Vector2( 85, 309 )

[node name="Position2D6" type="Position2D" parent="ConPosIzq"]
position = Vector2( 85, 257 )

[node name="Position2D7" type="Position2D" parent="ConPosIzq"]
position = Vector2( 85, 205 )

[node name="Position2D8" type="Position2D" parent="ConPosIzq"]
position = Vector2( 85, 153 )

[node name="Position2D9" type="Position2D" parent="ConPosIzq"]
position = Vector2( 85, 101 )

[node name="Position2D10" type="Position2D" parent="ConPosIzq"]
position = Vector2( 85, 49 )

[node name="Position2D11" type="Position2D" parent="ConPosIzq"]
position = Vector2( 85, -3 )

[node name="Position2D12" type="Position2D" parent="ConPosIzq"]
position = Vector2( 85, -55 )

[node name="ConPosDer" type="Node2D" parent="."]
position = Vector2( 255, 0 )

[node name="Position2D" type="Position2D" parent="ConPosDer"]
position = Vector2( 60, 534 )

[node name="Position2D2" type="Position2D" parent="ConPosDer"]
position = Vector2( 85, 465 )

[node name="Position2D3" type="Position2D" parent="ConPosDer"]
position = Vector2( 85, 413 )

[node name="Position2D4" type="Position2D" parent="ConPosDer"]
position = Vector2( 85, 361 )

[node name="Position2D5" type="Position2D" parent="ConPosDer"]
position = Vector2( 85, 309 )

[node name="Position2D6" type="Position2D" parent="ConPosDer"]
position = Vector2( 85, 257 )

[node name="Position2D7" type="Position2D" parent="ConPosDer"]
position = Vector2( 85, 205 )

[node name="Position2D8" type="Position2D" parent="ConPosDer"]
position = Vector2( 85, 153 )

[node name="Position2D9" type="Position2D" parent="ConPosDer"]
position = Vector2( 85, 101 )

[node name="Position2D10" type="Position2D" parent="ConPosDer"]
position = Vector2( 85, 49 )

[node name="Position2D11" type="Position2D" parent="ConPosDer"]
position = Vector2( 85, -3 )

[node name="Position2D12" type="Position2D" parent="ConPosDer"]
position = Vector2( 85, -55 )

[node name="contenedorIzq" type="Node" parent="."]

[node name="contenedorDer" type="Node" parent="."]

[node name="PositionFueraDer" type="Position2D" parent="."]
position = Vector2( 315, 710 )

[node name="PositionFueraIzq" type="Position2D" parent="."]
position = Vector2( 110, 710 )

[node name="PositionCentro" type="Position2D" parent="."]
position = Vector2( 212, 605 )

[node name="TweenDesplazamiento" type="Tween" parent="."]

[node name="TweenDesaparecer" type="Tween" parent="."]

[node name="TimerPulsacion" type="Timer" parent="."]

[node name="Moustro" parent="." instance=ExtResource( 5 )]
position = Vector2( 212, 603 )

[node name="PuntuacionInGame" parent="." instance=ExtResource( 6 )]
position = Vector2( 212, 95 )

[node name="BarraTiempo" parent="." instance=ExtResource( 4 )]
position = Vector2( 141, 22 )
tiempoMax = 2.0
tiempoAumentado = 0.3
aumentoVelocidad = 0.2

[node name="BotonPregunta" type="TextureButton" parent="."]
margin_left = 9.0
margin_top = 7.0
margin_right = 57.0
margin_bottom = 55.0
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 9 )

[node name="BombitaTiempo" parent="." instance=ExtResource( 10 )]
position = Vector2( 168, 525 )
tiempoMax = 0.5

[node name="Musica" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
volume_db = -6.0
autoplay = true
bus = "Musica"

[node name="BarraCombo" type="ProgressBar" parent="."]
visible = false
margin_left = 188.0
margin_top = 481.0
margin_right = 236.0
margin_bottom = 487.0
custom_styles/fg = SubResource( 1 )
value = 50.0
percent_visible = false

[node name="LabelTextCombo" type="Label" parent="."]
visible = false
margin_left = 187.0
margin_top = 448.0
margin_right = 237.0
margin_bottom = 468.0
custom_fonts/font = SubResource( 2 )
text = "combo"
align = 1
valign = 1

[node name="LabelCantCombo" type="Label" parent="."]
visible = false
margin_left = 187.0
margin_top = 461.0
margin_right = 237.0
margin_bottom = 481.0
custom_fonts/font = SubResource( 2 )
text = "00"
align = 1
valign = 1

[connection signal="tween_completed" from="TweenDesaparecer" to="." method="_on_TweenDesaparecer_tween_completed"]
[connection signal="timeout" from="TimerPulsacion" to="." method="_on_TimerPulsacion_timeout"]
[connection signal="pressed" from="BotonPregunta" to="." method="_on_BotonPregunta_pressed"]
